force-app/main/default/objects/ERL_Meta__mdt/ERL_Meta__mdt.object-meta.xml
<CustomObject>
    <description>This custom meta data is used for storing the configuration of the component in</description>
    <label>ERL Meta</label>
    <pluralLabel>ERL Meta</pluralLabel>
</CustomObject>