force-app/main/default/objects/ERL_Meta__mdt/fields/Child_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Field__c</fullName>
    <inlineHelpText>Use this field to specify a field to display on the editable related list</inlineHelpText>
    <label>Child Field</label>
    <metadataRelationshipControllingField>ERL_Meta__mdt.Parent_SObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>ERL_Meta</relationshipLabel>
    <relationshipName>ERL_Meta</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>