force-app/main/default/objects/ERL_Meta__mdt/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to confirm that the related list should be editable</inlineHelpText>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>