force-app/main/default/objects/ERL_Meta__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Use this field to specify the order related list items should appear in</inlineHelpText>
    <label>Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>