force-app/main/default/objects/ERL_Meta__mdt/fields/Parent_SObject__c.field-meta.xml
<CustomField>
    <fullName>Parent_SObject__c</fullName>
    <inlineHelpText>Specify the parent SObject Name for the related list</inlineHelpText>
    <label>Parent Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>SObjectMetaData</relationshipLabel>
    <relationshipName>SObjectMetaData</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>