force-app/main/default/objects/ERL_Meta__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <label>Child Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>ERL_Meta1</relationshipLabel>
    <relationshipName>ERL_Meta1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>