force-app/main/default/objects/ERL_Meta__mdt/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this box to confirm if the field should be visible or not</inlineHelpText>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>